--- a/webpackComplete/package.json
+++ b/webpackComplete/package.json
@@ -4,14 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "npm run build -- --watch",
-    "build": "node_modules/.bin/webpack src/index.js dist/bundle.js"
+    "watch": "npm run build",
+    "prod": "NODE_ENV=production node_modules/.bin/webpack",
+    "build": "node_modules/.bin/webpack src/babeltest.js dist/bundle.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "webpack": "^4.8.3",
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "http-server": "^0.11.1",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^2.2.1",
     "webpack-cli": "^2.1.3"
   }
 }
